fixing the UI of the buttons
I messed up the positioning of the chosen ingredients, but the two buttons should be fixed now.

--- a/src/index.css
+++ b/src/index.css
@@ -81,15 +81,15 @@ a:hover {
 
 /* SIDEBAR */
 .sideBar {
-  /* min-width: fit-content; */
-  max-width: 40%;
+  max-width: 230px;
   margin-right: 18px;
+  display: inline-block;
 }
 
+
 /* Container for buttons */
-.Mainbody>buttons {
+.Mainbody > buttons {
   display: inline-block;
-  /* change to "inline-block" to see buttons in column */
   align-items: center;
 }
 
@@ -106,7 +106,6 @@ input[type="file"] {
 }
 
 .file-upload {
-  min-width: 10%;
   text-align: center;
   font-size: 9pt;
   display: block;
@@ -141,8 +140,7 @@ input[type="file"] {
 .find-a-recipe {
   display: inline-block;
   padding: 1.4em 2em;
-  /* margin: 5em 4em; */
-  min-width: 10%;
+  /* margin: 5% 0; */
   cursor: pointer;
   background-color: #3C6154;
   color: white;
@@ -186,12 +184,12 @@ input[type="file"] {
   color: #3A3A3A;
 }
 
-/* .input-box > img {
-  margin: 5px;
-  background: #D7DAE5;
-} */
 
 
+/* CHOSEN INGREDIENTS CONTAINER */
+.chosen-ingreds-container {
+  
+}
 
 /* CHOSEN INGREDIENTS TEXT */
 .chosen-ingreds-text {
